# dd-instrumenter-agent

./: .gitignore  OAUTH_SETUP.md  README.md  config.py  dependencies.py  document_retriever.py  filesystem_utils.py  function_instrumenter.py  github_client.py  main.py  pr_description_generator.py  pyproject.toml  repo_analyzer.py  repo_parser.py  requirements.txt
frontend/: index.html
frontend/static/: main.js
llm/: __init__.py  function_instrumenter.py  pr_description_generator.py  repo_analyzer.py
prompts/: analyze_repo.md  generate_pr_description.md  instrument.md  instrument_cdk.md  instrument_terraform.md
routers/: health.py  instrument.py
util/: document.py  document_retriever.py  github_client.py  prompt_loader.py  repo_parser.py
